# ticket

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: benchmark.rs
src/: bin.rs  id.rs  lib.rs  ticket.rs
tests/: tests.rs
