[package]
name = "ticket"
version = "0.2.0"
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/Hanaasagi/ticket"
description = """
generate unique id which occupies 12 bytes.
"""

[lib]
name = "ticket"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
time = "0.3"
rand = "0.8.5"
md5 = "0.7"
lazy_static = "1.4.0"
machine-uid = "0.3.0"

[dev-dependencies]
bencher = "0.1"
